--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
    "outputs": [],
    "source": [
     "# Define Driver class here\n",
-    "class "
+    "class Driver:\n",
+    "    "
    ]
   },
   {
