--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
    "source": [
     "# Define Driver class here\n",
     "class Driver:\n",
-    "    greeting = "
+    "    greeting = \"Hey, how are you?\"\n",
+    "    "
    ]
   },
   {
