Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
     "# Define Driver class here\n",
     "class Driver:\n",
     "    greeting = \"Hey, how are you?\"\n",
-    "    "
+    "    ask_for_destination ="
    ]
   },
   {
