--- a/index.ipynb
+++ b/index.ipynb
@@ -55,14 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Driver class here\n",
     "class Driver:\n",
     "    greeting = \"Hey, how are you?\"\n",
-    "    ask_for_destination = \"Where would you like to go today?\""
+    "    ask_for_destination = \"Where would you like to go today?\"\n",
+    "    \n"
    ]
   },
   {
