--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# Define Driver class here\n",
     "class Driver:\n",
-    "    greeting = \"Hey, how are you?\"\n",
+    "    def greeting() = \"Hey, how are you?\"\n",
     "    ask_for_destination = \"Where would you like to go today?\"\n",
     "    \n"
    ]
