--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
     "# Define Driver class here\n",
     "class Driver:\n",
     "    def greeting()\n",
-    "    re\"Hey, how are you?\"\n",
+    "        return \"Hey, how are you?\"\n",
     "    ask_for_destination = \"Where would you like to go today?\"\n",
     "    \n"
    ]
