Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,9 +61,9 @@
    "source": [
     "# Define Driver class here\n",
     "class Driver:\n",
-    "    def greeting()\n",
+    "    def greeting():\n",
     "        return \"Hey, how are you?\"\n",
-    "    ask_for_destination = \"Where would you like to go today?\"\n",
+    "    def ask_for_destination() = \"Where would you like to go today?\"\n",
     "    \n"
    ]
   },
