Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,8 @@
     "class Driver:\n",
     "    def greeting():\n",
     "        return \"Hey, how are you?\"\n",
-    "    def ask_for_destination() = \"Where would you like to go today?\"\n",
+    "    def ask_for_destination(): \n",
+    "        return \"Where would you like to go today?\"\n",
     "    \n"
    ]
   },
