Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,11 @@
     "    def greeting(self):\n",
     "        return \"Hey, how are you?\"\n",
     "   \n",
-    "    def ask_for_destination(): \n",
+    "    def ask_for_destination(self): \n",
     "        return \"Where would you like to go today?\"\n",
-    "    \n"
+    "    \n",
+    "\n",
+    "    "
    ]
   },
   {
