--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "# Define Passenger class here \n",
+    "\n",
+    "class Passen"
    ]
   },
   {
