Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,8 @@
    "source": [
     "# Define Passenger class here \n",
     "\n",
-    "class Passen"
+    "class Passenger:\n",
+    "    def reply_greeting(self)"
    ]
   },
   {
