Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     "# Define Passenger class here \n",
     "\n",
     "class Passenger:\n",
-    "    def reply_greeting(self)"
+    "    def reply_greeting(self):\n",
+    "        "
    ]
   },
   {
