Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "class Passenger:\n",
     "    def reply_greeting(self):\n",
-    "        "
+    "        return 'I am ac'"
    ]
   },
   {
