--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,8 @@
     "\n",
     "class Passenger:\n",
     "    def reply_greeting(self):\n",
-    "        return 'I am ac'"
+    "        return 'I am doing well!'\n",
+    "    "
    ]
   },
   {
