Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,8 +91,8 @@
     "\n",
     "class Passenger:\n",
     "    def reply_greeting(self):\n",
-    "        return 'I am doing well!'\n",
-    "    "
+    "        return 'I am doing well!abs'\n",
+    "    def in_a_hurr"
    ]
   },
   {
