Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
     "class Passenger:\n",
     "    def reply_greeting(self):\n",
     "        return 'I am doing well!abs'\n",
-    "    def in_a_hurr"
+    "    def in_a_hurry(self):\n",
+    "        return "
    ]
   },
   {
