Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     "    def reply_greeting(self):\n",
     "        return 'I am doing well!abs'\n",
     "    def in_a_hurry(self):\n",
-    "        return "
+    "        return ' Punch it! They're on our "
    ]
   },
   {
