--- a/index.ipynb
+++ b/index.ipynb
@@ -83,18 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-9ff6e36ca7ea>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-9ff6e36ca7ea>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return ' Punch it! They're on our tail'\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define Passenger class here \n",
     "\n",
@@ -102,7 +93,7 @@
     "    def reply_greeting(self):\n",
     "        return 'I am doing well!abs'\n",
     "    def in_a_hurry(self):\n",
-    "        return  Punch it! They're on our tail'"
+    "        return \" Punch it! They're on our tail\""
    ]
   },
   {
