Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
+    "daniel = Driver() # driver\n",
     "niky = None # passenger"
    ]
   },
