--- a/index.ipynb
+++ b/index.ipynb
@@ -109,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "daniel = Driver() # driver\n",
-    "niky = None # passenger"
+    "niky = Passenger() # passenger"
    ]
   },
   {
