--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polite_greeting = daniel\n",
+    "polite_greeting = daniel.greeting\n",
     "print(polite_greeting)"
    ]
   },
