--- a/index.ipynb
+++ b/index.ipynb
@@ -129,11 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = daniel.greeting\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
