Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "\n",
     "class Passenger:\n",
     "    def reply_greeting(self):\n",
-    "        return 'I am doing well!abs'\n",
+    "        return 'I am doing well!'\n",
     "    def in_a_hurry(self):\n",
     "        return \" Punch it! They're on our tail\""
    ]
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
