--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Lion class\n"
+    "# Create Lion class\n",
+    "\n"
    ]
   },
   {
