Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,8 @@
    "outputs": [],
    "source": [
     "# Create Lion class\n",
-    "\n"
+    "class Lion():\n",
+    "    \n"
    ]
   },
   {
