Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,8 @@
    "outputs": [],
    "source": [
     "# Create Lion class\n",
-    "class Lion():\n",
+    "class Lion:\n",
+    "    def d\n",
     "    \n"
    ]
   },
