Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,8 @@
    "source": [
     "# Create Lion class\n",
     "class Lion:\n",
-    "    def d\n",
+    "    def speak():\n",
+    "        retrun ''\n",
     "    \n"
    ]
   },
