Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
     "# Create Lion class\n",
     "class Lion:\n",
     "    def speak():\n",
-    "        retrun 'sleepy cat noises'\n",
+    "        retn 'sleepy cat noises'\n",
     "    \n"
    ]
   },
