Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Lion class\n",
     "class Lion:\n",
     "    def speak():\n",
-    "        retn 'sleepy cat noises'\n",
+    "        return 'sleepy cat noises'\n",
     "    \n"
    ]
   },
