Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Tiger class\n"
+    "# Create Tiger class\n",
+    "class Tiger:\n",
+    "    def speak()"
    ]
   },
   {
