Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "# Create Lion class\n",
     "class Lion:\n",
-    "    def speak():\n",
+    "    def speak(self):\n",
     "        return 'sleepy cat noises'\n",
     "    \n"
    ]
@@ -193,7 +193,7 @@
    "source": [
     "# Create Tiger class\n",
     "class Tiger:\n",
-    "    def speak()"
+    "    def speak(se):"
    ]
   },
   {
