--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "source": [
     "# Create Tiger class\n",
     "class Tiger:\n",
-    "    def speak(se):"
+    "    def speak(self):\n",
+    "        return 'jun'"
    ]
   },
   {
