--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Tiger class\n",
     "class Tiger:\n",
     "    def speak(self):\n",
-    "        return 'jun'"
+    "        return 'jungle cat noises'"
    ]
   },
   {
