Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Elephant class\n"
+    "# Create Elephant class\n",
+    "class Elephant:\n",
+    "    def speak()"
    ]
   },
   {
