Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,8 @@
    "source": [
     "# Create Elephant class\n",
     "class Elephant:\n",
-    "    def speak()"
+    "    def speak(self):\n",
+    "        return 'ang'"
    ]
   },
   {
