Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,8 @@
     "# Create Elephant class\n",
     "class Elephant:\n",
     "    def speak(self):\n",
-    "        return 'ang'"
+    "        return 'angry trunk noises'\n",
+    "    "
    ]
   },
   {
