--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
+    "simba = Lion\n",
     "tony = None\n",
     "dumbo = None"
    ]
