--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = \n",
-    "tony = None\n",
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
     "dumbo = None"
    ]
   },
