Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for animal"
+    "for animal in zoo:\n",
+    "    animal.s"
    ]
   },
   {
