--- a/index.ipynb
+++ b/index.ipynb
@@ -253,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "for animal in zoo:\n",
-    "    animal.s"
+    "    printanimal.speak()"
    ]
   },
   {
