Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,12 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sleepy cat noises\n",
+      "jungle cat noises\n",
+      "angry trunk noises\n"
+     ]
+    }
+   ],
    "source": [
     "for animal in zoo:\n",
-    "    printanimal.speak()"
+    "    print(animal.speak())"
    ]
   },
   {
